--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "git+https://github.com/IlyasAbdighni/NodeReactTraining.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ilyas",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/IlyasAbdighni/NodeReactTraining/issues"
